# ramblings.derukugi.dev

./: Cargo.toml
src/: main.rs
static/: index.html
templates/: article.html  base.html  index.html  ramblings.html
templates/md/: test.md
