[package]
name = "ramblings"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4"
futures = "0.3.31"
hyper = "1.8.1"
once_cell = "1.21.4"
pulldown-cmark = "0.13.0"
tera = "1.20.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
